--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,10 +3,13 @@
           package="com.alex.tetris"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="17"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="17"/>
+
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.Light.NoTitleBar">
         <activity android:name="GameBoardActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
